webservers/pravda/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pravda
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/pollSchedule: "@every 8h"
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: pravda
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pravda
    spec:
      containers:
      - name: pravda
        image: harbor.k8s.lenin.nu/dh-mirror/nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: html
          mountPath: "/usr/share/nginx/html"
          readOnly: true
        resources:
          limits:
            cpu: 100m
            memory: 128M
          requests:
            cpu: 100m
            memory: 64M
      volumes:
        - name: html
          configMap:
            name: html-pravda-index
  revisionHistoryLimit: 1
