webservers/pravda/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: pravda-svc
spec:
  selector:
    app.kubernetes.io/name: pravda
  ports:
    - name: http
      port: 80
      targetPort: 80
